# Nvidia-Nemo-Agent-Toolkit-Agno-Learning

./: .env.example  .gitignore  Makefile  README.md
1_Climate_Agent_Workflow/: README.md  pyproject.toml
1_Climate_Agent_Workflow/src/climate_agent/: climate_agent_function.py  climate_tool_function.py  register.py
1_Climate_Agent_Workflow/src/climate_agent/data/: simple_eval.json
1_Climate_Agent_Workflow/src/climate_agent/utils/: calculator_agent.py  climate_tools.py
1_Climate_Agent_Workflow/src/configs/: config.yml
1_Climate_Agent_Workflow/tests/integration_tests/: test_api.py
1_First_NAT_Workflow/: README.md  configs  pyproject.toml
1_First_NAT_Workflow/src/climate_agent/: climate_agent_function.py  register.py
1_First_NAT_Workflow/src/configs/: config.yml
eval_results/: answer_accuracy_output.json  workflow_output.json
scripts/: export_env_pwsh.ps1
