[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
git_describe_command = ["git", "describe", "--long", "--first-parent"]
root = ".."

[project]
name = "climate_agent"
dynamic = ["version"]
description = "Climate Agent"
authors = [
    { name = "Shrijeeth S" }
]
requires-python = ">=3.11,<3.14"
classifiers = ["Programming Language :: Python"]
dependencies = [
    "nvidia-nat>=1.3.1",
    "nvidia-nat[agno]>=1.3.1",
    "nvidia-nat[phoenix]>=1.3.1",
    "nvidia-nat[litellm]>=1.3.1",
    "nvidia-nat[langchain]>=1.3.1",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "langchain_nvidia_ai_endpoints>=0.3.5"
]

[project.entry-points.'nat.components']
climate_agent_function = "climate_agent.register"
