[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64", "setuptools-scm>=8"]

[tool.setuptools_scm]
git_describe_command = ["git", "describe", "--long", "--first-parent"]
root = ".."

[project]
name = "climate_agent"
dynamic = ["version"]
description = "Climate Agent"
authors = [
    { name = "Shrijeeth S" }
]
requires-python = ">=3.11,<3.14"
classifiers = ["Programming Language :: Python"]
dependencies = [
    "nvidia-nat>=1.3.1",
    "nvidia-nat[agno]>=1.3.1",
    "nvidia-nat[litellm]>=1.3.1",
]

[project.entry-points.'nat.components']
climate_agent_function = "climate_agent.register"
